<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>blog.svenbayer</groupId>
    <artifactId>jib-k8s-limits-shenandoah-example</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>JIB K8s Limits Shenandoah Examples</name>
    <description>Examples of JIB with Kubernetes, cgroup limits and Shenandoah GC</description>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.0.5.RELEASE</version>
        <relativePath/>
    </parent>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>1.8</java.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>com.google.cloud.tools</groupId>
                <artifactId>jib-maven-plugin</artifactId>
                <configuration>
                    <to>
                        <image>index.docker.io/svenbayer/jib-k8s-limits-example:${project.version}</image>
                        <credHelper>osxkeychain</credHelper>
                    </to>
                    <from>
                        <image>registry.hub.docker.com/shipilev/openjdk-shenandoah:8</image>
                    </from>
                    <container>
                        <jvmFlags>
                            <!-- Be aware of the Docker cgroup limits of memory! -->
                            <jvmFlag>-XX:+UnlockExperimentalVMOptions</jvmFlag>
                            <jvmFlag>-XX:+UseCGroupMemoryLimitForHeap</jvmFlag>
                            <!-- Faster random generation! -->
                            <jvmFlag>-Djava.security.egd=file:/dev/./urandom</jvmFlag>

                            <!-- Configuration to use Shenandoah GC -->
                            <jvmFlag>-XX:+UseShenandoahGC</jvmFlag>
                            <jvmFlag>-verbose:gc</jvmFlag>
                        </jvmFlags>
                    </container>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>